logs/hub_cron.log
 * Serving Flask app 'watson_aristotle_hub'
 * Debug mode: off
Address already in use
Port 5205 is in use by another program. Either identify and stop that program, or start the server with a different port.
 * Serving Flask app 'watson_aristotle_hub'
 * Debug mode: off
Address already in use
Port 5205 is in use by another program. Either identify and stop that program, or start the server with a different port.
 * Serving Flask app 'watson_aristotle_hub'
 * Debug mode: off
Address already in use
Port 5205 is in use by another program. Either identify and stop that program, or start the server with a different port.
 * Serving Flask app 'watson_aristotle_hub'
 * Debug mode: off
Address already in use
Port 5205 is in use by another program. Either identify and stop that program, or start the server with a different port.
 * Serving Flask app 'watson_aristotle_hub'
 * Debug mode: off
Address already in use
Port 5205 is in use by another program. Either identify and stop that program, or start the server with a different port.
  File "/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py", line 1
    Auto-fixed placeholder for watson_aristotle_hub.py.
               ^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py", line 1
    Auto-fixed placeholder for watson_aristotle_hub.py.
               ^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py", line 1
    Auto-fixed placeholder for watson_aristotle_hub.py.
               ^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py", line 1
    Auto-fixed placeholder for watson_aristotle_hub.py.
               ^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py", line 1
    Auto-fixed placeholder for watson_aristotle_hub.py.
               ^^^^^^^^^^^
SyntaxError: invalid syntax
  File "/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py", line 1
    Auto-fixed placeholder for watson_aristotle_hub.py.
               ^^^^^^^^^^^
SyntaxError: invalid syntax
/usr/local/Cellar/python@3.13/3.13.7/Frameworks/Python.framework/Versions/3.13/Resources/Python.app/Contents/MacOS/Python: can't open file '/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py': [Errno 2] No such file or directory
/usr/local/Cellar/python@3.13/3.13.7/Frameworks/Python.framework/Versions/3.13/Resources/Python.app/Contents/MacOS/Python: can't open file '/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py': [Errno 2] No such file or directory
/usr/local/Cellar/python@3.13/3.13.7/Frameworks/Python.framework/Versions/3.13/Resources/Python.app/Contents/MacOS/Python: can't open file '/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py': [Errno 2] No such file or directory
/usr/local/Cellar/python@3.13/3.13.7/Frameworks/Python.framework/Versions/3.13/Resources/Python.app/Contents/MacOS/Python: can't open file '/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py': [Errno 2] No such file or directory
/usr/local/Cellar/python@3.13/3.13.7/Frameworks/Python.framework/Versions/3.13/Resources/Python.app/Contents/MacOS/Python: can't open file '/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py': [Errno 2] No such file or directory
python3: can't open file '/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py': [Errno 2] No such file or directory
